tests/spec/emit/snapshots/let_complex_pattern_unused_temp.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn mk() -> P { P { v: 1 } }
  fn test() {
    let P { v } = mk()
    ()
  }
---
package main

type P struct {
	v int
}

func mk() P {
	return P{v: 1}
}

func test() {
	_ = mk()
}
