tests/spec/emit/snapshots/let_discard_empty_block.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() {
    let _ = {}
  }
---
package main

func test() {}
