tests/spec/emit/snapshots/let_discard_parenthesized_unit_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    let _ = (noop())
  }
---
package main

func noop() {}

func main() {
	noop()
}
