tests/spec/emit/snapshots/let_discard_shadowed_unit_struct.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Blank {}
  
  fn test() {
    let _ = Blank {}
  }
---
package main

type Blank struct{}

func test() {
	_ = Blank{}
}
