tests/spec/emit/snapshots/let_else_in_arm_drops_the_test_the_arm_made.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Event {
    Click { x: int, y: int },
    Close,
  }
  
  fn test(e: Event) -> int {
    match e {
      Event.Click { x, y } => {
        let Event.Click { x: a, y: b } = e else { return 0 }
        a + b + x + y
      },
      _ => 0,
    }
  }
---
package main

func MakeEventClick(arg0 int, arg1 int) Event {
	return Event{Tag: EventClick, X: arg0, Y: arg1}
}

func MakeEventClose() Event {
	return Event{Tag: EventClose}
}

type EventTag uint8

const (
	EventClick EventTag = iota
	EventClose
)

type Event struct {
	Tag EventTag
	X   int
	Y   int
}

func test(e Event) int {
	if e.Tag == EventClick {
		a := e.X
		b := e.Y
		return a + b + e.X + e.Y
	}
	return 0
}
