tests/spec/emit/snapshots/let_else_in_the_else_arm_keeps_its_test.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Event {
    Click { x: int, y: int },
    Close,
  }
  
  fn test(e: Event) -> int {
    match e {
      Event.Click { x, y } => x + y,
      _ => {
        let Event.Click { x: a, y: b } = e else { return 5 }
        a + b
      },
    }
  }
---
package main

func MakeEventClick(arg0 int, arg1 int) Event {
	return Event{Tag: EventClick, X: arg0, Y: arg1}
}

func MakeEventClose() Event {
	return Event{Tag: EventClose}
}

type EventTag int

const (
	EventClick EventTag = iota
	EventClose
)

type Event struct {
	Tag EventTag
	X   int
	Y   int
}

func test(e Event) int {
	if e.Tag == EventClick {
		return e.X + e.Y
	}
	if e.Tag != EventClick {
		return 5
	}
	a := e.X
	b := e.Y
	return a + b
}
