tests/spec/emit/snapshots/let_else_irrefutable_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> int {
    let x = opt else { return 0; };
    let _ = x;
    42
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	x := opt
	_ = x
	return 42
}
