tests/spec/emit/snapshots/let_else_irrefutable_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct P { v: int }\nfn mk() -> P { P { v: 1 } }\n\nfn test() {\n  let P { v: _ } = mk() else {\n    panic(\"no\")\n  }\n  ()\n}\n"
---
package main

type P struct {
	v int
}

func mk() P {
	return P{v: 1}
}

func test() {
	_ = mk()
}
